# CS224N_project

./: .bash_profile  .bashrc  .gitignore  .gitmodules  CLAUDE.md  NOTES.md  README.md  TODO.md  TORUN.md  activate_env.ps1  pyproject.toml  run_pipeline.sh  setup_env.ps1
.claude/: settings.json  settings.local.json
configs/: config.yaml
configs/experiment/: freeze_then_align.yaml  graph_transformer.yaml  gt_freeze_then_align.yaml  multi_loss.yaml  partial_freeze.yaml  stop_grad.yaml
configs/experiment/ablation/: cls_pooling.yaml  freeze_bert_layers.yaml  gcn.yaml  gnn_1layer.yaml  gnn_3layer.yaml  lambda_high.yaml  lambda_low.yaml  max_pooling.yaml  mu_high.yaml  mu_zero.yaml  no_projection.yaml  simcse_only.yaml
configs/model/: alignment.yaml  bert.yaml  gnn.yaml
scripts/: debug_train.py  download_senteval_data.sh  download_wiki.py  parse_graphs.py  run_baselines.py  setup_env_ssh.sh
src/: config.py  evaluate.py  evaluation.py  train.py  trainer.py
src/alignment/: losses.py
src/data/: __init__.py  collator.py  syntax_augmentation.py
src/models/: gnn_encoder.py  wrapper.py
src/processing/: graph_loader.py  syntax_parser.py
tests/: test_gnn_encoder.py  test_integration.py
